--- a/style.css
+++ b/style.css
@@ -371,3 +371,34 @@ ul { list-style: none; }
 .social-icons a:hover {
   color: var(--clr-primary);
 }
+/* Hover = Active for .service cards */
+
+/* 1) Border color on hover */
+.service:hover {
+  border-color: var(--clr-primary);
+}
+
+/* 2) Arrow rotation & colors on hover */
+.service:not(:nth-child(3)):not(:nth-child(6)):hover .arrow {
+  transform: rotate(0deg);
+  background: var(--clr-primary);
+  color: #fff;
+}
+/* For your special green ones (3rd & 6th) */
+.service:nth-child(3):hover .arrow,
+.service:nth-child(6):hover .arrow {
+  transform: rotate(90deg);
+  background: green;
+  color: #fff;
+}
+
+/* 3) Title color on hover */
+.service:hover h3 {
+  color: var(--clr-primary);
+}
+/* And green for 3rd & 6th */
+.service:nth-child(3):hover h3,
+.service:nth-child(6):hover h3 {
+  color: green;
+}
+
